fix: [PIE-5137]: Nexus2 and nexus3 artifact (#11256)
* fix: created nexus2 artifact

* fix: artifact source file addeD

* fix: code refactored

* fix: added nexus3

* fix: duplicate strings removed

* fix: types issue fixed

* fix: snapshot updated

* fix: strings updated

* fix: nexus3 allows docker in kubernetes and rest in other deployment types

* fix: googleoperations cypress test fixed

--- a/src/modules/35-connectors/strings/strings.en.yaml
+++ b/src/modules/35-connectors/strings/strings.en.yaml
@@ -254,7 +254,8 @@ hashiCorpVault:
   serviceAccountRequired: Service Account Token Path Required
   preventDefaultWhenReadOnly: Read only secret manager cannot be set as default
 nexus:
-  nexusLabel: Nexus
+  nexusLabel: Nexus3
+  nexus2Label: Nexus2
   nexusServerUrl: 'Nexus Repository URL'
 artifactory:
   artifactoryLabel: Artifactory
