--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -799,6 +799,15 @@ artifactImagePathLabel: Artifact/Image Path
 selectArtifactPathPlaceholder: Select or Enter an Artifact Path (Optional)
 artifactPathFilterLabel: Artifact Path Filter
 artifactsSelection:
+  artifactId: Artifact ID
+  artifactIdPlaceholder: Enter Artifact ID
+  groupId: Group ID
+  groupIdPlaceholder: Enter Group ID
+  extension: Extension
+  extensionPlaceholder: Enter Extension
+  classifier: Classifier
+  classifierPlaceholder: Enter Classifier
+  packageName: Package Name
   addPrimaryArtifact: Add Primary Artifact
   addArtifactSource: Add Artifact Source
   addSidecar: Add Sidecar
@@ -806,7 +815,6 @@ artifactsSelection:
   projectPlaceholder: Enter Project
   repositoryTypePlaceholder: Select Repository Type
   delegateselectionPlaceholder: Add specific selectors or leave empty to target any delegate
-  packageName: Package Name
   repositoryPort: Repository Port
   artifactsArrayPath: Artifacts Array Path
   versionPath: Version Path
@@ -844,11 +852,14 @@ artifactsSelection:
     packageName: Package Name is required
     imagePath: Image Path is required
     artifactPath: Artifact Path is required
+    artifactId: Artifact ID is required
+    groupId: Group ID is required
     region: '{{$.validation.regionRequired}}'
     tag: Tag is required
     tagRegex: Tag Regex is required
     sidecarId: Sidecar Identifier is required
     repositoryPort: Repository Port is required
+    repositoryFormat: Repository Format is required
     repositoryUrl: Repository URL is required
     repositoryType: Repository Type is required
     artifactDirectory: Artifact Directory is required
