fix: [CDS-42172]: added artifact details on hover (#11438)
* fix: [CDS-42172]: added artifact details on hover

* fix: [CDS-42172]: test update

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -558,3 +558,5 @@ azureArm:
 removeStepTemplateSuccess: Step Template has been successfully removed
 addStepTemplate: Add step template
 useStepTemplate: Use step template
+artifactVersion: 'Version :'
+artifactPath: 'Path :'
