feat: [CDS-43590]: Added checkbox for helm deploy ignore release hist… (#11437)
* feat: [CDS-43590]: Added checkbox for helm deploy ignore release history failed status

* fix: [CDS-43590]: updated code

* feat: [CDS-43590]: resolved conflict

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -557,5 +557,6 @@ azureArm:
 removeStepTemplateSuccess: Step Template has been successfully removed
 addStepTemplate: Add step template
 useStepTemplate: Use step template
+ignoreReleaseHistFailStatus: 'Ignore Release History Failed Status'
 artifactVersion: 'Version :'
 artifactPath: 'Path :'
