fix: [DEL-4837]: Updated helm delegate install command (#11443)

--- a/src/modules/30-delegates/strings/strings.en.yaml
+++ b/src/modules/30-delegates/strings/strings.en.yaml
@@ -35,7 +35,7 @@ successVerification:
   addHelmRepoLabel: 'Add Harness helm repo'
   addHelmRepoCmd: '$ helm repo add <repo-name> https://app.harness.io/storage/harness-download/harness-helm-charts/'
   installHelmChartLabel: 'To install the helm chart use the below command'
-  installHelmChartCmd: '$ helm upgrade -i <delegate-name> --namespace <namespace> --create-namespace <repo-name>/harness-delegate-ng -f harness-delegate-values.yaml'
+  installHelmChartCmd: '$ helm install  --namespace <namespace> --create-namespace harness/harness-delegate-ng -f harness-delegate-values.yaml'
   checkingForHeartbeat: Checking for heartbeat
 delegateNotInstalled:
   verifyStatus1: 'docker container ls -a'
