feat: [DEL-4836]: Added run as root in delegate step for kubernetes (#11444)

--- a/src/modules/30-delegates/strings/strings.en.yaml
+++ b/src/modules/30-delegates/strings/strings.en.yaml
@@ -148,3 +148,4 @@ noInstances: 'No instances'
 successfullyUpdatedConfig: 'Successfully Updated Delegate Configuration'
 configNameRequired: 'Delegate Configuration name is Required.'
 instanceStatus: 'Instance Status'
+runAsRoot: 'Run delegate with root access'
