feat: add container list images (#11419)

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -269,6 +269,7 @@ serviceDashboard:
   taskDefinitionArn: Task Definition ARN
   taskArn: Task ARN
   awsRegion: AWS Region
+  containerList: containerList
 noEnvironment:
   title: No Environments Available
   message: Create an environment and let’s start configuring the deployment
