feat: [CDS-43680]: integrate APIs for the fields of EcsBlueGreenCreateService step (#11406)
* feat: ECSBlueGreenCreateService step WIP

* feat: implement ECSBlueGreenSwapTargetGroups and ECSBlueGreenRollback steps

* fix: add test cases for EcsBlueGreenSwapTargetGroups and EcsBlueGreenRollbackStep steps

* feat: add all remaining fields in ECS BG Create Service step with static options

* fix: snapshot

* chore: add comments explaining API call changes which are temporary

* fix: add validaton to other than common fields in ECSBlueGreenCreateServiceStep

* feat: integrate APIs for EcsBlueGreenCreateService step fields

* fix: strings typecheck

* fix: snapshots

* fix: when runtime fields are dependent on other fixed fields then Runtime view should work fine

* fix: pass envRef and infraRef to fetch field options when service/env V2 FF is on

* fix: when service/env v2 FF is on, make listener rules call if environmentRef and infraRef are present

* fix: when parent fields change then change field value only when field value is of type FIXED

* fix: sonar issue

* fix: listener rules API call in Runtime view when service/env V2 is ON

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -92,12 +92,12 @@ steps:
       useAwsInstanceFilter: Use AWS Instance Filter
       hostName: Host Name Convention
       vpcs: VPCs
-      loadBalancer: Load  Balancer
   ecsBGCreateServiceStep:
     sectionHeaders:
       configureProductionService: Configure your Production Service
       configureStageService: Configure your Stage Service
     labels:
+      elasticLoadBalancer: Elastic Load Balancer
       prodListener: Prod Listener
       prodListenerRuleARN: Prod Listener Rule ARN
       stageListener: Stage Listener
