feat: [CDS-43853]: fixed WinRM text (#11474)
* feat: CDS-43853: fixed WinRM text

* feat: CDS-43853: fixed WinRM text

* feat: [CDS-43853]: snapshot update

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1210,6 +1210,8 @@ serviceDeploymentTypes:
   azureFunctions: Azure Functions
   azureWebApp: Azure Web Apps
   customDeployment: Deployment Template
+  serverlessAwsType: Serverless Aws Lambda
+  customDeploy: Custom Deployment
 noArtifactPaths: No artifact paths found with given Artifact Directory
 stageDataDeleteWarningTitle: Discard Stage Data
 serviceDataDeleteWarningTitle: Discard Service Data
