feat: [CDS-40881]: Artifacts Triggers for Service V2 (#11360)
* feat: [CDS-40881]: Artifact Trigger V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

* feat: [CDS-40881]: Artifacts Triggers for Service V2

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -609,6 +609,7 @@ artifactTriggerConfigPanel:
   configureInput: 'Configure Input'
   listenOnNewArtifact: 'Listen on New {{artifact}}'
   plusSelect: '+ Select {{artifact}}'
+  defineSource: 'Define Artifact Source'
   selectAnArtifact: 'Select an Artifact Reference'
   selectAManifest: 'Select a Manifest Reference'
   configureArtifactRuntimeInputs: 'Configure {{artifact}} Runtime Inputs'
