feat: [PIE-5477]: multi env - infra defs in single environment (#11485)
* feat: update infradefs

* feat: update environment card

* feat: [PIE-5477]: single select infrastructure

* feat: add multi env infra toggle

* fix: env tab movement

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -175,6 +175,7 @@ pipelineSteps:
     environmentOrEnvGroupIsRequired: 'Environment or Environment Group is required'
     environmentInEnvGroupIsRequired: 'Environment in Environment Group is required'
     clusterIsRequired: 'Clusters are required'
+    multiEnvInfraToggleText: 'Deploy to multiple Environments or Infrastructures'
   serviceTab:
     stageOverrides: Stage Overrides
     overrideChanges: Override artifacts, manifests, service variables for this stage
