feat: [CDS-42910]: Freeze Widow - Config Section (#11458)
* feat: [CDS-42910]: Freeze Widow - Config Section

* feat: [CDS-42910]: Freeze Widow - Config Section

* feat: [CDS-42910]: Freeze Widow - Config Section

* Add Env Type field in Config Section in Freeze Windows

* feat: Add ervice Field - Init

* feat: Add Org field

* add API to fetch orgs

* feat: add Proj field

* feat: add Proj field

* feat: add Proj field

* feat: add Yaml to Visual helper function

* Add stylings for Config View

* Add icon buttons from uicore

* Add icon buttons from uicore

* Add icon buttons from uicore

* Add Edit and Delete buttons

* refactor to new component

* Adds Add Rule button

* Adds Add Rule button

* Adds Add Rule button

* add freezLevel to context

* add fieldVisibility

* move freeze windows to sidebar in case of account

* fix route paths

* fix route paths

* feat: [CDS-42910]: Fix types

* feat: [CDS-42910]: Fix types

* feat: [CDS-42910]: Fix types

* feat: [CDS-42910]: Fix types

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -45,7 +45,10 @@ templateStartLabel: Start with Template
 duplicateId: 'Duplicate Identifier'
 createPipeline: Create a Pipeline
 importFromGit: Import From Git
+allEnvironments: All Environments
+allServices: All Services
 production: Production
+preProduction: 'Pre-Production'
 addVariable: Add Variable
 advanced: '{{ $.advancedTitle }}'
 editVariable: Edit variable
