--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -5,3 +5,5 @@ freezeStudio:
   freezeConfiguration: Freeze Configuration
   freezeOverview: Freeze Overview
   defineResources: Define which resources you want to include in this freeze window
+  excludeOrgs: Exclude specific Organizations
+  excludeProjects: Exclude specific Projects
