feat: [CDS-43499]: DT enhancements + test cases (#11448)
* fix: dummy commit

* feat: [CDS-43499]: reconcile infra for custom deploymentTemplate (#11427)

* fix: reconcile infra definition for DT + connector drawer support for connector variables + custom Validation schema for variables component

* fix: connector hook data passed from parent

* fix: infrastructure reconcile dialog

* fix: addConnectorDrawer added and reconcile infra component added

* fix: all connectors allowed for customDeployment DT

* fix: test cases

* fix: test cases added

fix: test case added

* fix: labels corrected

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1380,8 +1380,8 @@ selectiveStageExecution: 'Selective stage execution'
 customDeployment:
   infraVariablesTitle: 'Define the variables to be used in your environment and infrastructure.'
   seeOnlyTemplatesFor: See only templates for {{name}}
-  hostObjectArrayPath: 'Host Object Array Path'
-  hostAttributes: 'Host Attributes'
+  instanceObjectArrayPath: 'Instance Object Array Path'
+  instanceAttributes: 'Instance Attributes'
   newAttribute: 'New Attribute'
   fetchInstancesScript: 'Fetch Instance Script'
   fetchInstanceScriptHeader: 'Define your script inline or from File Store.'
