feat: [CDS-42911]: Freeze Window - Config Section Changes (#11550)
* feat: [CDS-42911]: Freeze Window - Config Section Changes

* feat: [CDS-42911]: Freeze Window - Config Section Changes

* feat: [CDS-42911]: fix Autofocus issue in Freeze Windows

* add autofocus property

* feat: [CDS-42911]: Add Notify button

* feat: [CDS-42911]: Make Organization multi select field

* feat: [CDS-42911]: add proper query params

* feat: [CDS-42911]: Add Services Field for Project level

--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -1,9 +1,11 @@
 freezeWindowsPage:
   noFreezeWindows: There are no freeze windows in your {{scope}}.
   newFreezeWindow: New Freeze Window
+  editFreezeWindow: Edit Freeze Window
 freezeStudio:
   freezeConfiguration: Freeze Configuration
   freezeOverview: Freeze Overview
   defineResources: Define which resources you want to include in this freeze window
   excludeOrgs: Exclude specific Organizations
   excludeProjects: Exclude specific Projects
+  allOrganizations: All Organizations
