feat: [SRM-11819]: Elk health Source (#11245)
* feat: [SRM-11819]: Elk health Source

* feat: [SRM-11819]: ELK Health Source

* feat: [SRM-11819]: ELK Health Source

* feat: [SRM-11819]: ELK Health Source

* feat: [SRM-11819]: Elk Health Source

* feat: [SRM-11819]: Elk Health Source

* feat : [SRM-11819]: Elk HS tests

* feat : [SRM-11819]: snapshot

* feat : [SRM-11819]: extra file

* feat : [SRM-11819]: prettier

* feat : [SRM-11819]: sonar

* feat : [SRM-11819]: type checks

* feat : [SRM-11819]: eslint

* feat : [SRM-11819]: clean up

* feat: [SRM-11819]: coverage

* feat: [SRM-11819]: coverage

* feat: [SRM-11819]: Coverage

* feat: [SRM-11819]: strings

* feat: [SRM-11819]: snapshot delete

* feat: [SRM-11819]: typecheck

* feat: [SRM-11819]: more coverage

* feat: [SRM-11819]: More coverage

* feat: [SRM-11819]: more coverage added

* feat: [SRM-11819]: fix mock

* feat: [SRM-11819]: prettier

* feat: [SRM-11819]: typecheck

* feat: [SRM-11819]: coverage l

* feat: [SRM-11819]: code review commnts

* feat: [SRM-11819]: typecheck

* feat: [SRM-11819]: typecheck

* feat: [SRM-11819]: pr check fixes

* feat: [SRM-11819]: pr check fixes

* feat: [SRM-11819]: rename files

* feat: [SRM-11819]: clean up

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -393,6 +393,26 @@ monitoringSources:
       groupName: Group Name is required.
       uniqueName: '{{existingName}} already exists. Provide a unique name.'
       recordCount: Current query yields too many records. Please change query to yield one record.
+  elk:
+    elkLogsQuery: ELK Logs Query
+    identifyTimeStampnoRecordModalHeader: 'New TimeStamp Identifier'
+    identifyTimeStampnoRecordInputLabel: 'Add TimeStamp Identifier'
+    identifyTimeStamprecordsModalHeader: 'Select Path for TimeStamp'
+    identifyTimeStampinputLabel: 'Identify TimeStamp'
+
+    timeStampFormatInputLabel: 'TimeStamp Format'
+    selectTimeStampFormat: 'Select TimeStamp Format'
+
+    logIndexesInputLabel: 'Log Indexes'
+    selectLogIndex: 'Select Log Index'
+
+    logIndexValidation: 'Log Index is required field'
+    serviceInstanceValidation: 'Service Instance is required field'
+    identifyTimeStampValidation: 'Identify TimeStamp is required field'
+    timestampFormatValidation: 'TimeStamp Format is required field'
+    messageIdentifierValidation: 'Message Identifier is required field'
+    submitElkQuery: 'Submit query to see records from ELK'
+
   splunk:
     splunkLogsQuery: SPLUNK Logs Query
     splunkMetric: Splunk Metrics
