--- a/src/services/cv/overrides.yaml
+++ b/src/services/cv/overrides.yaml
@@ -17,6 +17,9 @@ allowpaths:
   - /splunk/validation
   - /splunk/saved-searches
   - /splunk/sample-data
+  - /elk/sample-data
+  - /elk/indices
+  - /health/time-format
   - /splunk/metric-sample-data
   - /timeseries/metric-group-data
   - /timeseries/metric-template
