feat: [CDS-44132]: tooltips added and label update for DT variables (#11573)

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1379,7 +1379,8 @@ skipInstances:
   title: 'Skip instances with the same artifact version already deployed'
 selectiveStageExecution: 'Selective stage execution'
 customDeployment:
-  infraVariablesTitle: 'Define the variables to be used in your environment and infrastructure.'
+  infraVariablesTitle: 'Define the variables to be used in your infrastructure'
+  updateInfraVariablesTitle: ' Update values for variables defined as part of used template'
   seeOnlyTemplatesFor: See only templates for {{name}}
   instanceObjectArrayPath: 'Instance Object Array Path'
   instanceAttributes: 'Instance Attributes'
