feat: [FFM-3962]: Onboarding UX Improvements: Create or Select Flag (#11213)
* feat: [FFM-3962]: FF Onboarding Create Flag
- Changed input in Step 1 to a Select to allow selection of existing flag, or creation of new flag
- labels updated and font colors changed to match design
- reusable component created for displaying selected flag (will be needed in future changes)

* feat: [FFM-3962]: increase test coverage for FF Onboarding

* feat: [FFM-3962]: unit test coverage & TS complaints fix

* feat: [FFM-3962]: more unit tests

* feat: [FFM-3962]: remove unused internal flag, update snapshots

* feat: [FFM-3962]: fixes for PR

* feat: [FFM-3962]: unit tests, fixes after rebase, some PR changes

* feat: [FFM-3962]: unit test coverage & PR fixes

* feat: [FFM-3962]: pr fixes

* feat: [FFM-3962]: remove commented out code

* feat: [FFM-3962]: fix dupe string value error & update snapshot

* feat: [FFM-3962]: addressing PR comments, increasing code coverage another little bit

* feat: [FFM-3962]: fix test for OnboardingDetailPage after rebase

* feat: [FFM-3962]: strings

--- a/src/modules/75-cf/strings/strings.en.yaml
+++ b/src/modules/75-cf/strings/strings.en.yaml
@@ -131,7 +131,7 @@ featureFlags:
   true: 'True'
   false: 'False'
   noFlagsInProject: There are no Flags in this Project
-  noFlagsDescription: A Feature Flag controls what you want to release, who receives it, and how it will be delivered.
+  flagsDescription: A Feature Flag controls what you want to release, who receives it, and how it will be delivered.
   noFlagsToGetStarted: To get started with Feature Flags, you can <a href="https://docs.harness.io/article/1j7pdkqh7j-create-a-feature-flag" target="_blank" rel="noreferrer">create your first Flag</a>, <a href="https://docs.harness.io/category/rtce97j1wu-ff-sdks" target="_blank" rel="noreferrer">get started with our SDKs</a>, or <a href="https://docs.harness.io/category/iqgyied1c0-ff-getting-started" target="_blank" rel="noreferrer">read our getting started guide</a>.
   getStartedWithFF: Get Started with Feature Flags
   typeOfFlag: Select the Type of Flag You Want to Create
@@ -619,12 +619,15 @@ onboarding:
   oneCreateAFlag: '1. Create a Flag'
   setUpApp: '2. Set Up Your Application'
   testYourFlag: '3. Test Your Flag'
-  letsStart: Let's start off by creating a simple flag
-  inputLabel: Give your flag a memorable name
-  successLabel: 'You have created <strong>{{name}}</strong> with Id: <strong>{{identifier}}</strong>'
+  letsGetStarted: Let's get started
+  createFlag: Create a Feature Flag
+  flagInputLabel: Select an existing Flag or type the name to create new one
+  selectOrCreateFlag: Select or Create a Flag
+  youCreated: You've created
+  youreUsing: You're using
   setupLabel: Set up your application and code to communicate with our platform.
   selectLanguage: Select your language
-  selectEnvironment: Select your environment
+  selectYourEnvironment: Select your Environment
   createEnv: Create an environment
   envCreated: Environment Created
   sdkKeyLabel: Please create an SDK key for your environment
