feat: [CDS-43558]: Add pruningEnabled checkbox to k8s steps (#11558)

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -16,6 +16,7 @@ steps:
     releaseNamePlaceholder: Enter Release Name
     specifyCredentials: Specify Credentials
     undefinedType: Undefined deployment type
+    enableKubernetesPruning: 'Enable Kubernetes Pruning'
   commands:
     runTheCommands: Run the following commands
     addCommand: Add Command
