feat: [CDS-42911]: Freeze Window config Section and Schedule Section WIP (#11588)
* feat: [CDS-42911]: Freeze Window Config Section

* feat: [CDS-42911]: Add Yup validation

* feat: Add Schedule Tab - Init

* feat: Add Schedule Tab - Init

* feat: [CDS-42911]: Add Edit support

* add validtion in overview form

* Fix header alignment

* Fix key problem using setting initial values again

* fix env type field

* feat: [CDS-42911]: Freeze Config - types fix

* fix build issue

* fix build issue

--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -5,6 +5,7 @@ freezeWindowsPage:
 freezeStudio:
   freezeConfiguration: Freeze Configuration
   freezeOverview: Freeze Overview
+  freezeSchedule: Freeze Schedule
   defineResources: Define which resources you want to include in this freeze window
   excludeOrgs: Exclude specific Organizations
   excludeProjects: Exclude specific Projects
