feat: useInterval hook with compute current time range (#11602)

--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -2,6 +2,13 @@ freezeWindowsPage:
   noFreezeWindows: There are no freeze windows in your {{scope}}.
   newFreezeWindow: New Freeze Window
   editFreezeWindow: Edit Freeze Window
+  confirmDeleteTitle: Delete Freeze Window
+  confirmDeleteText: Are you sure you want to delete the freeze window {{name}}?
+  deleteSuccess: Deleted freeze window(s) successfully
+  deleteFailure: Failed to delete freeze window(s)
+  updateStatusSuccess: Freeze Window(s) {{value}} successfully
+  updateStatusFailure: Failed to {{value}} Freeze Window(s)
+
 freezeStudio:
   freezeConfiguration: Freeze Configuration
   freezeOverview: Freeze Overview
@@ -10,3 +17,5 @@ freezeStudio:
   excludeOrgs: Exclude specific Organizations
   excludeProjects: Exclude specific Projects
   allOrganizations: All Organizations
+
+disableAllDeployments: Disable all deployments for this Account (all Projects)
