feat: [SRM-11927]: Cloud watch feature (#11255)
* feat: [SRM-11927]: Update cloud watch

* feat: [SRM-11927]: Initial skeleton

* feat: [SRM-11927]: Cloud watch feature

* feat: [SRM-11927]: Add feature flag

* feat: [SRM-11927]: Update types with Swagger

* feat: [SRM-11927]: Update types and validations

* feat: [SRM-11927]: Add unit tests

* feat: [SRM-11927]: Add Cypress

* feat: [SRM-11927]: Refactor for Sonar

* feat: [SRM-11927]: Updated jest

* feat: [SRM-11927]: Fixed test in Custom metric

* feat: [SRM-11927]: Remove unused import

* feat: [SRM-11927]: Added tests

* feat: [SRM-11927]: Add unit test for coverage

* feat: [SRM-11927]: Updated unit tests

* feat: [SRM-11927]: Updated unit test in Define health source

* feat: [SRM-11927]: Boost coverage

* feat: [SRM-11927]: Boost coverage

* feat: [SRM-11927]: Refactor

* feat: [SRM-11927]: Refactor to add common components

* feat: [SRM-11927]: Add query chart

* feat: [SRM-11927]: Fix tests

* feat: [SRM-11927]: Remove checkbox group

* feat: [SRM-11927]: Updated review comments

* feat: [SRM-11927]: Updated default metric name

* feat: [SRM-11927]: boost coverage

* feat: [SRM-11927]: refactor unused code

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -196,6 +196,8 @@ monitoringSources:
   higherCounts: Higher value is higher risk
   lowerCounts: Lower value is higher risk
   metricNameValidation: Metric Name is required.
+  metricIdentifierPattern: Identifier should be alphanumeric and should start with lower case. Only allowed special character is "_"
+  metricIdentifierValidation: Metric identifier is required.
   metricValidation: Metric is required.
   uniqueIdentifierValidation: '{{idName}} already exists. Provide a unique identifier.'
   queryNameValidation: Query Name is required.
@@ -646,8 +648,17 @@ healthSource:
   connectors:
     selectConnector: Select {{sourceType}} Connector
     customMetrics: Custom Metrics (optional)
+    customMetricsWithoutOptional: Custom Metrics
     customMetricsTooltip: Add custom metrics
     buildChart: Build Chart
+    CloudWatch:
+      awsSelectorPlaceholder: Select an AWS Region
+      fetchDataButtonText: Fetch data
+      validationMessage:
+        expression: Expression is required
+        customMetrics: Add minimum one custom metric
+        submitQuery: Submit query to see chart
+
     NewRelic:
       applicationLabel: Find an NewRelic application
       nrqlQuery: NRQL Query
