fix: [CDS-43970]: custom artifact old yaml support fix (#11543)
* fix: custom artifact old yaml support fix

* fix: optional config added in serviceV2

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -27,7 +27,7 @@ confirmAction: Confirm action
 accountSetup: Account Setup
 projectSetup: Project Setup
 additionalAttributes: Additional Attributes
-addAttribute: + Add Attribute
+addAttribute: Add Attribute
 orgSetup: Org Setup
 delegateForTask: '{{delegate}} for {{taskName}}'
 defineDelegateSelector: 'Define Delegate Selector'
