--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -17,5 +17,7 @@ freezeStudio:
   excludeOrgs: Exclude specific Organizations
   excludeProjects: Exclude specific Projects
   allOrganizations: All Organizations
+  excludeFollowingProject: Exclude the following Project
+  excludeFollowingProjects: Exclude the following Projects
 
 disableAllDeployments: Disable all deployments for this Account (all Projects)
