feat: [CDS-44142]: add doNotDownsizeOldService field to EcsBlueGreenSwapTargetGroups step (#11587)
* fix: pass serviceRef and environementRef to cluster API in runtime view

* fix: add test cases for ECSBlueGreenCreateServiceStep file

* feat: add new checkbox field doNotDownsizeOldService to ECSBlueGreenSwapTargetGroups step, also cluster API should work in Runtime view when service V2 is ON

* fix: existing test cases for rolling deploy step and add test cases for bg swap target groupd edit view

* fix: remove unwanted comment

* fix: test cases by reverting viewType change

* fix: add test cases for EcsBlueGreenCreateService step edit view

* fix: jest cases that broken because of cluster API V2 changes

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -471,6 +471,8 @@ getStartedWithCD:
 ecsRollingDeployStep:
   sameAsAlreadyRunningInstances: Same as already running instances
   forceNewDeployment: Force new deployment
+ecsBGSwapTargetGroupsStep:
+  doNotDownsizeOldService: Do not downsize old service
 serviceName: '{{ $.common.serviceName }}'
 skipRendering: Skip K8s Manifest(s) Rendering
 credentialsRef: credentialsRef
