feat: [CDS-42911]: Integrate Edit API (#11617)
* feat: [CDS-42911]: Freze window enhancements

* feat: [CDS-42911]: Integrate Edit API

--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -19,5 +19,7 @@ freezeStudio:
   allOrganizations: All Organizations
   excludeFollowingProject: Exclude the following Project
   excludeFollowingProjects: Exclude the following Projects
+  freezeCreatedSuccessfully: Freeze window created successfully
+  freezeUpdatedSuccessfully: Freeze window updated successfully
 
 disableAllDeployments: Disable all deployments for this Account (all Projects)
