feat: [SRM-12176]: Fix AppD tier and application (#11553)

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -422,6 +422,7 @@ monitoringSources:
     submitQueryToSeeRecords: Submit query to see records from Splunk
     staleRecordsWarning: Records not upated with latest query. Please fetch records
     defaultSplunkMetricName: Splunk Metric
+    addSplunkGroupName: add Splunk group name
   gcoLogs:
     query: QUERY
     gcoLogsServiceInstance: Add service instance
